--- a/website/src/index.css
+++ b/website/src/index.css
@@ -15,3 +15,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
