--- a/website-leaderboard/src/components/leaderboard.module.css
+++ b/website-leaderboard/src/components/leaderboard.module.css
@@ -1,3 +1,33 @@
+.loadImage {
+  width: 70vmin;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.pageRoot {
+  display: flex;
+  justify-content: center;
+}
+.leaderboardRoot {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 90%;
+  /* margin-left: 5%; */
+  max-width: 130vmin;
+}
+
+.logoContainer {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin-left: 5%;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+/*
 ul {
   padding-left: 0;
   list-style: none;
@@ -148,4 +178,4 @@ ul {
 .logoContainer {
   height: 150vh;
   width: 150vh;
-}
+} */
