--- a/website-leaderboard/src/components/followFooter.module.css
+++ b/website-leaderboard/src/components/followFooter.module.css
@@ -4,13 +4,13 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 12vmin;
+  height: 10vmin;
   padding-top: 3vmin;
   background: linear-gradient(transparent, #310e59 35%, #8c28ff);
   z-index: 100;
   align-items: center;
   color: white;
   justify-content: center;
-  font-size: 4vmin;
-  font-weight: bold;
+  font-size: 3vmin;
+  font-weight: 600;
 }
