--- a/website-leaderboard/src/components/leaderboardTable.module.css
+++ b/website-leaderboard/src/components/leaderboardTable.module.css
@@ -81,22 +81,24 @@ ul {
 }
 
 .liRacer {
-  /* margin-left: 4vmin; */
+  width: 48vmin;
   font-weight: 400;
 }
 
+.topThreeLiRacer {
+  width: 40vmin;
+}
+
 .liTime {
-  margin-left: auto;
-  margin-right: 2vmin;
-  padding-top: 0.5vmin;
-  padding-bottom: 0.5vmin;
+  padding-top: 1vmin;
+  padding-bottom: 1vmin;
   font-size: 1.5em;
   font-style: italic;
 }
 
 .moduleRow {
   width: 100%;
-  border-radius: 2.5vmin;
+  border-radius: 2vmin;
   background: rgba(113, 36, 131, 0.3);
   background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0)),
     linear-gradient(90deg, rgba(0, 255, 235, 0.2), rgba(117, 38, 134, 0.2));
