Average Time Racing Format

--- a/website-leaderboard/src/components/raceInfoFooter.module.css
+++ b/website-leaderboard/src/components/raceInfoFooter.module.css
@@ -67,6 +67,7 @@
   font-weight: 500;
   font-size: 5vmin;
   font-style: italic;
+  font-family: "Open Sans", "Helvetica Neue", Roboto, Arial, sans-serif
   /*padding: 2vb;*/
 }
 
